[package]
name = "fltk-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "1.3.28", features = ["fltk-bundled"] }
derivative = "2.2.0"
fontdue = "0.7.2"
thiserror = "1.0.38"
xmlparser = "0.13.5"
